deployment/k8s/overlays/k3s/patch-keycloak-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: voco
spec:
  template:
    spec:
      containers:
        - name: keycloak
