deployment/k8s/overlays/k3s/patch-livekit-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit-svc
  namespace: voco
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: signaling
      port: 7880
      targetPort: signaling
      protocol: TCP
      nodePort: 7880
    - name: rtc-tcp
      port: 7881
      targetPort: rtc-tcp
      protocol: TCP
      nodePort: 7881
